# reaction

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BUG_REPORT.md  CMakeLists.txt  CMakeLists_stress.txt  CONTRIBUTING.md  Doxyfile  IMPLEMENTATION_PLAN.md  LICENSE  PR_DESCRIPTION.md  README.md  README.zh-CN.md  SMALL_MEMORY_OPTIMIZATION_SUMMARY.md  TESTING_SUMMARY.md  TODO_ROADMAP.md  batch_performance_analysis.cpp  benchmarks.cpp  build_and_test.sh  crash_tests.cpp  cuda_architecture_design.cpp  cuda_design_analysis.md  dangling_reference_solution.cpp  debug_issues  debug_issues.cpp  exception_handling_design.cpp  exception_safety_analysis.cpp  find_more_bugs  find_more_bugs.cpp  ncu_profiling_guide.md  optimized_resume.md  reproduce_bugs.cpp  run_comprehensive_tests.sh  simple_stress_test  simple_stress_test.cpp  stress_tests.cpp  stress_tests_complex_scenarios.cpp  stress_tests_performance.cpp  stress_tests_type_system.cpp  (+4 more)
.github/workflows/: cmake-multi-platform.yml  documentation.yml
benchmark/: CMakeLists.txt  bench.cpp  bench_cache.cpp  bench_comparison.cpp  bench_multi_thread.cpp  bench_sbo.cpp
docs/: README.md  SBO_OPTIMIZATION.md
example/: CMakeLists.txt  basic_example.cpp  batch_example.cpp  contain_example.cpp  exception_example.cpp  field_example.cpp  multi_thread_example.cpp  reflect_example.cpp  sbo_example.cpp  stress_example.cpp  trigger_example.cpp
include/: reaction.h
include/reaction/: batch.h  concept.h  dataSource.h  exception.h  expression.h  invalidStrategy.h  invalidation.h  log.h  observer.h  observerHelper.h  observerNode.h  react.h  reaction.h  resource.h  thread_safety.h  triggerMode.h  utility.h  valueCache.h  valueTpErase.h
include/reaction/cache/: cache_base.h  graph_cache.h
include/reaction/concurrency/: global_state.h  thread_safety.h
include/reaction/core/: concept.h  exception.h  global_state.h  id_generator.h  observer_node.h  raii_guards.h  react.h  resource.h  resource_optimized.h  resource_selector.h  types.h
include/reaction/expression/: atomic_operations.h  expression.h  expression_builders.h  expression_types.h  operators.h
include/reaction/factory/: reactive_factory.h
include/reaction/graph/: batch.h  field_graph.h  observer_graph.h
include/reaction/memory/: sbo_resource.h
include/reaction/policy/: invalidation.h  trigger.h
scripts/: generate-docs.sh  validate-config.sh
src/: observerHelper.cpp
test/: CMakeLists.txt  test.cpp
test/benchmark/: CMakeLists.txt  bench.cpp
test/common/: test_fixtures.h  test_helpers.h
test/unit/: test_advanced_features.cpp  test_basic_operations.cpp  test_batch_operations.cpp  test_containers.cpp  test_dependency_graph.cpp  test_exception_handling.cpp  test_expression_division.cpp  test_expression_operators.cpp  test_expression_templates.cpp  test_invalidation.cpp  test_invalidation_strategies.cpp  test_memory_management.cpp  test_operators.cpp  test_reset_consistency.cpp  test_sbo.cpp  test_sbo_optimization.cpp  test_thread_safety.cpp  test_trigger.cpp  test_trigger_strategies.cpp
